--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "practicafront",
   "version": "1.0.0",
+  "homepage": "https://github.com/RodrigoK10/rodrigo-portafolio.git",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "echo 'No lint setup yet' && exit 0",
-    "test": "echo 'No tests setup yet' && exit 0"
+    "test": "echo 'No tests setup yet' && exit 0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^6.3.0"
